[gd_scene load_steps=3 format=3 uid="uid://bvx36xq7nk58o"]

[ext_resource type="Theme" uid="uid://b5gc3dkgm7nm7" path="res://UI/ui_theme.tres" id="1_bsspf"]
[ext_resource type="Script" path="res://UI/game_hud.gd" id="1_s7bc6"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7bc6")

[node name="GameOver" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = -47.0
offset_right = 69.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bsspf")
text = "Game Over!
Space to Continue."

[node name="NextLevel" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = -47.0
offset_right = 69.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bsspf")
text = "Level Complete!
Space to Continue."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 94.0
grow_horizontal = 2
alignment = 1

[node name="Health" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_bsspf")
text = "Damage: 0%"

[node name="Score" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme = ExtResource("1_bsspf")
text = "Score: 0"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="GameOver" to="." method="_on_game_over_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
